# react-native-quick-pinyin

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-pinyin.podspec  react-native-quick-pinyin.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/quickpinyin/: PinyinModule.java  PinyinPackage.java
android/src/main/java/com/reactnativepinyin/: PinyinModule.java
android/src/main/java/com/reactnativequickpinyin/: PinyinPackage.java
cpp/: pinyin.h  react-native-quick-pinyin.cpp  react-native-quick-pinyin.h
cpp/__tests__/: Makefile  pinyin_test.cpp
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativepinyin/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativepinyin/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/PinyinExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/PinyinExample.xcodeproj/: project.pbxproj
example/ios/PinyinExample.xcodeproj/xcshareddata/xcschemes/: PinyinExample.xcscheme
example/ios/PinyinExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: Pinyin.h  Pinyin.m  Pinyin.mm
ios/Pinyin.xcodeproj/: project.pbxproj
scripts/codegen/: dict.js  dict.json  index.js
src/: index.tsx
